* Bug fix: On the change blocks dialog the background overlay wasn't removed when clicking on it.
* Set a fixed width on the change blocks dialog.
* Bug fix: Added maxHeight to help dialog box. Boxes could be too long when opened within a popup (like the help dialog boxes for dates).
* Applied some styles to datatables.

TODO:: ADD ICONS FOR edit_raw (see theme Xenea in svn 7131). Update submenu styles.
========================================================================================================
 
01-07-2013 - JustBlack for webtrees 1.4.3 v3.
* Added JustBlack Theme Options module version 1.0.2.
========================================================================================================
 
28-06-2013 - JustBlack for webtrees 1.4.3 v2.
* Bugfix: Active flags in language bar not lightening up. Fixed.
* Bugfix: Border around header bar in advanced search results - error in css file. Fixed.
* JustBlack Theme Options Module version 1.0.1

========================================================================================================
25-06-2013 - JustBlack for webtrees 1.4.2/1.4.3
* NEW: THEME-OPTIONS. FROM THIS VERSION THIS THEME COMES WITH A SEPARATE MODULE WHERE YOU CAN SET SEVERAL THEME OPTIONS.
* Added notes to the colorbox popup. Notes will be displayed in a tooltip when opening the colorbox for 5 seconds and on hovering over the image with the mouse.
  Note this function only works for images not pdf's.
* Changed the layout of the favorite and the theme dropdown menus to a pure css based layout for better user experience. The function getMenuAsDropdown was removed in webtrees SVN 14960.
* Changed the layout of the login block on homepage.
* Removed some inner block margins and paddings.
* Removed unused functions from justblack.js or moved functionality to style.css.
* Changed the display of the spouses boxes on the Hourglass Chart when 'show spouses'is activated.